--- a/vcastplay-cms/src/app/features/playlist/playlist-container/playlist-container.component.html
+++ b/vcastplay-cms/src/app/features/playlist/playlist-container/playlist-container.component.html
@@ -2,8 +2,8 @@
     <div class="flex gap-4 h-full playlist-content-lists" cdkDropList [cdkDropListData]="contents?.value" 
         (cdkDropListDropped)="onDropped($event)" cdkDropListOrientation="horizontal">
         @for (item of contents?.value; track trackByFn($index, item)) {
-            <app-playlist-item-content #playlistContent cdkDrag [content]="item" [playlist]="playListForm.value" 
-                [cdkDragDisabled]="isPlaying()" cdkDragBoundary=".playlist-content-lists" />
+            <app-playlist-item-content #playlistContent cdkDrag [content]="item" [playlist]="playlistForm" [isPlaying]="isPlaying"
+                [cdkDragDisabled]="currentPlaying" cdkDragBoundary=".playlist-content-lists" />
         } @empty {
             <div class="flex items-center justify-center h-full absolute top-0 left-0 w-full">
                 <p class="text-gray-400 italic">Drop contents here</p>
