Added API service and authentication

--- a/vcastplay-cms/src/app/features/auth/login/login.component.html
+++ b/vcastplay-cms/src/app/features/auth/login/login.component.html
@@ -1,48 +1,79 @@
 <div class="grid grid-cols-5 w-full h-screen">
-    <ng-container *ngIf="tokenValue()">
-        <div class="col-span-3 hidden lg:block relative">
-            <p-carousel [value]="slides" [numVisible]="1" [numScroll]="1" [circular]="true" [showIndicators]="false" [showNavigators]="false" [autoplayInterval]="5000">
-                <ng-template let-item #item>
-                    <div class="flex items-center justify-center w-full h-screen relative">
-                        <img [src]="item.image" class="w-full h-full object-cover" alt="banner">
-                        <div class="absolute top-0 left-0 w-full h-full bg-[var(--p-primary-500)] opacity-40"></div>
-                        <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center text-center">
-                            <p class="text-[2.75rem] font-bold text-[var(--p-surface-200)]">"{{ item.text }}"</p>
-                        </div>
-                    </div>
-                </ng-template>
-            </p-carousel>
-        </div>
-    </ng-container>
-    <div class="col-span-5 text-white" [ngClass]="{ 'lg:col-span-2': tokenValue() }" (keydown.enter)="auth.onLogin()">
-        <div class="relative flex flex-col items-center justify-center h-full p-3 md:p-10 bg-[var(--p-primary-500)]">
-            <div class="flex flex-col gap-4 px-4 lg:px-0 w-full" [ngClass]="{ 'md:w-1/2 lg:w-1/4': !tokenValue(), 'sm:w-1/2 lg:w-full': tokenValue() }">
-                <div class="flex flex-col gap-10 items-center justify-center">
-                    <img src="assets/vcastplay-icon-transparent.png" alt="app logo" width="100">
-                    <p class="text-2xl font-bold">
-                        @if (tokenValue()) { Login to your account }
-                        @else { Administrator Login }
-                    </p>
-                </div>
-                <form class="grid grid-cols-1 gap-4 my-[2rem]" [formGroup]="auth.loginForm">
-                    <p-floatlabel variant="in">
-                        <input id="username" pInputText formControlName="username" [fluid]="true" />
-                        <label for="username">Username*</label>
-                    </p-floatlabel>
-                    <p-floatlabel variant="in">
-                        <p-password formControlName="password" inputId="password" [toggleMask]="true" [fluid]="true" [feedback]="false" />
-                        <label for="password">Password*</label>
-                    </p-floatlabel>
-                    <div class="flex justify-between items-center">
-                        <div class="flex items-center">
-                            <p-checkbox inputId="rememberMe" formControlName="rememberMe" [binary]="true" />
-                            <label for="rememberMe" class="ml-2">Remember Me</label>
-                        </div>
-                        <a href="/" class="hover:text-[var(--p-primary-200)]">Forgot Password?</a>
-                    </div>
-                </form>
-                <p-button (onClick)="onClickLogin()" styleClass="w-full" label="Login" severity="secondary" />
+  <ng-container *ngIf="tokenValue()">
+    <div class="col-span-3 hidden lg:block relative">
+      <p-carousel
+        [value]="slides"
+        [numVisible]="1"
+        [numScroll]="1"
+        [circular]="true"
+        [showIndicators]="false"
+        [showNavigators]="false"
+        [autoplayInterval]="5000"
+      >
+        <ng-template let-item #item>
+          <div class="flex items-center justify-center w-full h-screen relative">
+            <img [src]="item.image" class="w-full h-full object-cover" alt="banner" />
+            <div
+              class="absolute top-0 left-0 w-full h-full bg-[var(--p-primary-500)] opacity-40"
+            ></div>
+            <div
+              class="absolute top-0 left-0 w-full h-full flex items-center justify-center text-center"
+            >
+              <p class="text-[2.75rem] font-bold text-[var(--p-surface-200)]">"{{ item.text }}"</p>
             </div>
-        </div>
+          </div>
+        </ng-template>
+      </p-carousel>
     </div>
+  </ng-container>
+  <div
+    class="col-span-5 text-white"
+    [ngClass]="{ 'lg:col-span-2': tokenValue() }"
+    (keydown.enter)="onLogin()"
+  >
+    <div
+      class="relative flex flex-col items-center justify-center h-full p-3 md:p-10 bg-[var(--p-primary-500)]"
+    >
+      <div
+        class="flex flex-col gap-4 px-4 lg:px-0 w-full"
+        [ngClass]="{ 'md:w-1/2 lg:w-1/4': !tokenValue(), 'sm:w-1/2 lg:w-full': tokenValue() }"
+      >
+        <div class="flex flex-col gap-10 items-center justify-center">
+          <img src="assets/vcastplay-icon-transparent.png" alt="app logo" width="100" />
+          <p class="text-2xl font-bold">
+            @if (tokenValue()) { Login to your account } @else { Administrator Login }
+          </p>
+        </div>
+        <form class="grid grid-cols-1 gap-4 my-[2rem]" [formGroup]="loginForm">
+          <p-floatlabel variant="in">
+            <input id="username" pInputText formControlName="username" [fluid]="true" />
+            <label for="username">Username*</label>
+          </p-floatlabel>
+          <p-floatlabel variant="in">
+            <p-password
+              formControlName="password"
+              inputId="password"
+              [toggleMask]="true"
+              [fluid]="true"
+              [feedback]="false"
+            />
+            <label for="password">Password*</label>
+          </p-floatlabel>
+          <div class="flex justify-between items-center">
+            <div class="flex items-center">
+              <p-checkbox inputId="rememberMe" formControlName="rememberMe" [binary]="true" />
+              <label for="rememberMe" class="ml-2">Remember Me</label>
+            </div>
+            <a href="/" class="hover:text-[var(--p-primary-200)]">Forgot Password?</a>
+          </div>
+        </form>
+        <p-button
+          (onClick)="onClickLogin()"
+          styleClass="w-full"
+          label="Login"
+          severity="secondary"
+        />
+      </div>
+    </div>
+  </div>
 </div>
