--- a/vcastplay-cms/src/app/features/design-layout/design-layout-preview/design-layout-preview.component.html
+++ b/vcastplay-cms/src/app/features/design-layout/design-layout-preview/design-layout-preview.component.html
@@ -1,11 +1,11 @@
-<div #canvasContainer class="origin-center flex items-center justify-center overflow-hidden">
+<div #canvasContainer class="relative origin-center flex items-center justify-center z-20 overflow-hidden">
     @for (layer of designLayout.htmlLayers; track trackById($index, layer)) {
         <div class="absolute pointer-events-none z-10 overflow-hidden flex items-center justify-center" [id]="layer.id" 
             [style]="{ top: layer.top + 'px', left: layer.left + 'px', width: layer.width + 'px', 
                 height: layer.height + 'px', transform: 'rotate(' + layer.rotation + 'deg) translateZ(0)' }">
                 @switch (layer.type) {
                     @case ('playlist') {
-                    <app-playlist-player class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg" 
+                    <app-playlist-player class="absolute h-full w-full flex items-center justify-center bg-stone-800" 
                         [playlist]="layer.content" [isAutoPlay]="true" />
                     }
                     @case ('youtube') {
