--- a/vcastplay-cms/src/styles.scss
+++ b/vcastplay-cms/src/styles.scss
@@ -205,6 +205,14 @@ html {
 .animate-slide-left { animation: slide-left var(--animation-duration, 0.8s) ease-in-out forwards; }
 .animate-slide-right { animation: slide-right var(--animation-duration, 0.8s) ease-in-out forwards; }
 
+.fb-video {
+    position: relative !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    width: 100%;
+    height: 100%;
+}
 
 /* Scrollbar effect */
 
