--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -1,36 +1,26 @@
 <div
   #viewport
-  class="relative flex flex-col gap-4 justify-center items-center h-screen relative group overflow-hidden select-none"
+  class="relative flex flex-1 flex-col gap-4 justify-center items-center h-screen group overflow-hidden select-none"
   [ngClass]="{ 'bg-[var(--p-primary-500)]': !isPlay(), 'bg-stone-800': isPlay() }"
 >
   <!-- Main Player -->
   <ng-container *ngIf="currentContent as contentData">
     @switch (contentData?.type) { @case ('design') {
-    <app-preview-design-layout
-      class="flex-1 h-full w-full flex items-center justify-center"
-      [ngClass]="{ 'opacity-100': isPlay(), 'opacity-0': !isPlay() }"
-      [viewport]="viewport"
-      [contentData]="contentData"
-      (isDoneRendering)="onDoneRendering($event)"
-    />
+      <app-design-layout-preview 
+        class="flex-1 h-full w-full flex items-center justify-center"
+        [ngClass]="{ 'opacity-100': isPlay(), 'opacity-0': !isPlay() }"
+        [viewport]="viewport"
+        [designLayout]="contentData"
+        [isPlaying]="isPlay()"
+      />
     } @case('playlist') {
-    <app-preview-content-renderer
-      class="relative w-full h-full group bg-stone-800 text-white rounded-lg"
-      [ngClass]="{ 'opacity-100': isPlay(), 'opacity-0': !isPlay() }"
-      [autoPlay]="true"
-      [contentData]="contentData"
-    />
+      <app-playlist-preview class="relative w-full h-full group bg-stone-800 text-white rounded-lg" [playlist]="contentData" [isAutoPlay]="true" />
     } @default {
-    <app-preview-assets
-      class="absolute h-full w-full flex items-center justify-center"
-      [ngClass]="{ 'opacity-100': isPlay(), 'opacity-0': !isPlay() }"
-      [currentContent]="contentData"
-      (timeUpdate)="onProgressUpdate(contentData.id, $event)"
-    />
+      <app-asset-preview class="relative w-full h-full flex items-center justify-center" [asset]="contentData" [autoPlay]="true" [showControls]="false" />
     } }
   </ng-container>
 
-  <ng-container *ngIf="!currentContent">
+  <ng-container *ngIf="!currentContent && !isPlay()">
     <div class="absolute top-0 start-0 flex items-center justify-center p-6">
       <img class="w-30" src="assets/vcastplay.png" alt="vcastplay 2.0 logo" />
     </div>
@@ -59,11 +49,40 @@
     </div>
   </ng-container>
 
+  <ng-container *ngIf="isPlay() && !currentContent">
+    <div class="absolute h-full w-full flex flex-col gap-4 items-center justify-center text-center">
+      <p class="text-2xl font-bold text-white w-full">
+        Loading Content...
+      </p>
+    </div>
+  </ng-container>
+
   <div class="absolute bottom-0 left-0 flex items-center gap-1 p-2 w-full">
     <div class="grid grid-cols-5 gap-3">
       <p-button
-        label="Asset"
-        (onClick)="onClickSetContent('asset')"
+        label="Image"
+        (onClick)="onClickSetContent('image')"
+        severity="secondary"
+        size="small"
+        fluid
+      />
+      <p-button
+        label="Video"
+        (onClick)="onClickSetContent('video')"
+        severity="secondary"
+        size="small"
+        fluid
+      />
+      <p-button
+        label="Facebook"
+        (onClick)="onClickSetContent('facebook')"
+        severity="secondary"
+        size="small"
+        fluid
+      />
+      <p-button
+        label="Youtube"
+        (onClick)="onClickSetContent('youtube')"
         severity="secondary"
         size="small"
         fluid
@@ -71,6 +90,13 @@
       <p-button
         label="Playlist"
         (onClick)="onClickSetContent('playlist')"
+        severity="secondary"
+        size="small"
+        fluid
+      />
+      <p-button
+        label="Playlist 2"
+        (onClick)="onClickSetContent('playlist2')"
         severity="secondary"
         size="small"
         fluid
