--- a/vcastplay-player/src/styles.scss
+++ b/vcastplay-player/src/styles.scss
@@ -11,6 +11,13 @@ video {
     background-image: none;
 }
 
+.fb-video span {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    width: 100% !important;
+    height: 100% !important;
+}
 
 .animate-marquee {
     display: flex;
